2010-06-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.Dialogs/GtkFeatureWidget.cs: Don't offer
	  the gtk feature if gtk# is not installed in the active
	  runtime. Fixes bug #608052 - The New Solution wizard throws
	  an exception after choosing project features.

2010-05-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.GtkCore.Dialogs/BindDesignDialog.cs:
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs:
	* MonoDevelop.GtkCore.Dialogs/SelectRenamedClassDialog.cs:
	* MonoDevelop.GtkCore.Dialogs/ConfirmWindowDeleteDialog.cs:
	  More dialog placing.

2010-05-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs:
	  Converted some static fields which don't need to be static
	  into local vars.

2010-05-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Track
	  API.

2010-04-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Track
	  AddFilesToProject API.

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs:
	  ViewContent widgets are now destroyed by the workspace
	  window.


2010-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs: call
	  destroy on the container vbox during

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.GtkCore/ReferenceManager.cs: Found better work
	  around for the "gnome-sharp" reference issue.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.GtkCore/ReferenceManager.cs: Fixed 'Bug 599335 -
	  Error CS0433: The imported type `Gtk.DeleteEventArgs' is
	  defined multiple times (CS0433)'.

2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Added
	  null check.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: