@@ -1,3 +1,8 @@
+2010-07-05  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs: Track
+	  API changes.
+
 2010-06-01  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.GtkCore.Dialogs/GtkFeatureWidget.cs: Don't offer
